https://github.com/veronicah11234/First-assignment.git

--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first project</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <nav class="top-nav">
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          
+
+        </ul>
+    </nav>
+</div><br>
    <h1>
     My experience in my current school
    </h1> 
@@ -29,6 +41,17 @@
     <li>They have ability to understand there students though they are online</li>
     <li>When it comes to assighnment they are tough</li>
 
-   </ul>
+   </ul> <br> 
+
+   <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum iusto unde iste est minus natus quisquam dignissimos eum delectus vel provident commodi dolores iure exercitationem voluptatem autem fugiat eius dolorem saepe fuga,
+     dolore nesciunt molestiae corrupti? Adipisci itaque, qui sit soluta asperiores a, perspiciatis doloremque, natus quis sapiente corrupti assumenda.
+   </p>
+   <br>
+
+   <div>
+ 
+
+   <a href="https://docs.google.com/document/d/1Q7m7JL7Rmx1ChCp-wgPCnaFgdBJ_t-2XN8U-B1m0TKk/edit?pli=1#heading=h.j0q0njuuxmo2">COMMAND LINES </a>
 </body>
 </html>
